--- a/JavaQuiz/app/src/main/res/values/strings.xml
+++ b/JavaQuiz/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">JavaQuiz</string>
+    <string name="settings_label_completed">Show completed:</string>
+    <string name="settings_label_count">Count:</string>
+    <string name="settings_label_language">Language:</string>
 </resources>
