--- a/JavaQuiz/app/src/main/res/values/strings.xml
+++ b/JavaQuiz/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="settings_label_completed">Show completed:</string>
     <string name="settings_label_count">Count:</string>
     <string name="settings_label_language">Language:</string>
+    <string name="settings_language__prompt">Choose a language</string>
+
+    <string-array name="language_arrays">
+        <item>English</item>
+        <item>Russian</item>
+    </string-array>
 </resources>
