--- a/JavaQuiz/app/src/main/res/values/strings.xml
+++ b/JavaQuiz/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="settings_label_count">Count:</string>
     <string name="settings_label_language">Language:</string>
     <string name="settings_language__prompt">Choose a language</string>
+    <string name="item_1">Итем 1</string>
 
     <string-array name="language_arrays">
         <item>English</item>
