--- a/JavaQuiz/app/src/main/res/values/strings.xml
+++ b/JavaQuiz/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
         <item>English</item>
         <item>Russian</item>
     </string-array>
+
+    <string-array name="difficulty_arrays">
+        <item>Junior</item>
+        <item>Middle</item>
+        <item>Senior</item>
+    </string-array>
 </resources>
