--- a/JavaQuiz/app/src/main/res/values/strings.xml
+++ b/JavaQuiz/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">JavaQuiz</string>
     <string name="settings_label_completed">Show completed:</string>
-    <string name="settings_label_count">Count:</string>
+    <string name="settings_label_count">Count: </string>
     <string name="settings_label_language">Language:</string>
+    <string name="settings_label_difficulty">Difficulty:</string>
     <string name="settings_language__prompt">Choose a language</string>
     <string name="item_1">Итем 1</string>
     <string name="view_navigation_open">Open</string>
